--- a/index.html
+++ b/index.html
@@ -97,6 +97,9 @@
 				  <div class="col-md-offset-2 col-md-8">
             <h1 class="cheddar extra-big">Barberos Haircut's</h1>
 					 <h1>Coming soon!</h1>
+           <p class="lead">La app que conecta las mejores barberías con los clientes que saben lo
+que quieren.</p>
+
 					 	    <button type="button" class="play-store"></button>
                 <button type="button" class="app-store"></button>
 				  </div>
@@ -131,7 +134,13 @@
 					      	<div class="row">
 					      		<div class="col-sm-12 col-md-offset-1 col-md-6">
 					      			<h1>BARBERO'S HAIRCUT</h1>
-					      			<p>Es una nueva aplicación movil destinada, tanto a barberos, como a usuarios</p>
+					      			<p>Encuentra tu barbería más cercana o la que mejor se adapte a tu estilo.</p>
+
+                      <p>Reserva tu cita de manera sencilla y rápida a tiempo real.</p>
+
+                      <p>Comparte tu opinión y valora la experiencia recibida con la comunidad.</p>
+                      <p>Conoce el trabajo de otros barberos en su perfil, eligiendo el que más se adapte a tu estilo.</p>
+                      <p>Comparte tu opinión con la comunidad.</p>
 					      		</div>
 					      		<div class="col-sm-12 col-md-5">
 					      			<div class="app-screenshot">
@@ -144,7 +153,8 @@
 					    	<div class="row">
 					    		<div class="col-sm-12 col-md-offset-1 col-md-6">
 					    			<h1>Desde tu perfil</h1>
-					    			<p>Podras organizar tus citas, y demás servicios</p>
+					    			<p>Da a conocer tu trabajo a los clientes y haz crecer tu negocio obteniendo
+                        más reservas y valoraciones positivas.</p>
 					    		</div>
 					    		<div class="col-sm-12 col-md-5">
 					    			<div class="app-screenshot">
@@ -156,8 +166,9 @@
 					    <div class="item">
 					      <div class="row">
 					      	<div class="col-sm-12 col-md-offset-1 col-md-6">
-                    <h1>Desde tus reservas</h1>
-					    			<p>Podras confirmar tus proximas citas</p>
+                    <h1>Desde servicios</h1>
+					    			<p>Conoce el trabajo de cada barbero en su perfil, eligiendo el que más se
+                        adapte a tu estilo.</p>
 					      	</div>
 					      	<div class="col-sm-12 col-md-5">
 					      		<div class="app-screenshot">
@@ -170,7 +181,8 @@
 					      <div class="row">
 					      	<div class="col-sm-12 col-md-offset-1 col-md-6">
                     <h1>Desde tus reservas</h1>
-					    			<p>Podras confirmar tus proximas citas</p>
+					    			<p>Administra las citas de manera sencilla y rápida, cada barbería dispondrá
+                        de un perfil y cada barbero organizara su calendario por separado</p>
 					      	</div>
 					      	<div class="col-sm-12 col-md-5">
 					      		<div class="app-screenshot">
