--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto+Condensed:300italic,400italic,700italic,400,300,700' rel='stylesheet' type='text/css'>
     <!-- Template Styles -->
     <link href="css/style.css" rel="stylesheet" media="screen">
+    <link rel="stylesheet" href="css/stylesheet.css" type="text/css" charset="utf-8" />
+
       </head>
   <body>
 
@@ -29,7 +31,7 @@
 			    </button>
 
 			    <!--Replace text with your app name or logo image-->
-			    <a class="navbar-brand" href="#">BARBERO'S HAIRCUT</a>
+			    <a class="navbar-brand cheddar" href="#">Barberos Haircut's</a>
 
 			  </div>
 			  <div class="collapse navbar-collapse navbar-ex1-collapse">
@@ -49,7 +51,6 @@
 		 <div class="container">
 			 <div class="row">
 				 <div class="col-md-12">
-					  <h1>BARBERO'S HAIRCUT</h1>
 					  <p class="lead"></p>
 
 					  <div class="carousel-iphone">
@@ -60,12 +61,14 @@
 					      <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
 					      <li data-target="#carousel-example-generic" data-slide-to="1"></li>
 					      <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+                <li data-target="#carousel-example-generic" data-slide-to="3"></li>
+
 					    </ol>
 
 					    <!-- Wrapper for slides -->
 					    <div class="carousel-inner">
 					      <div class="item active">
-					        <img src="img/screenshots/app-1.png" alt="App Screen 1">
+					        <img src="img/screenshots/app-1.jpg" alt="App Screen 1">
 					      </div>
 					      <div class="item">
 					        <img src="img/screenshots/app-2.jpg" alt="App Screen 2">
@@ -73,6 +76,9 @@
 					      <div class="item">
 					        <img src="img/screenshots/app-3.jpg" alt="App Screen 3">
 					      </div>
+                <div class="item">
+                  <img src="img/screenshots/app-4.jpg" alt="App Screen 4">
+                </div>
 
 					    </div>
 					  </div>
@@ -89,9 +95,13 @@
 		  <div class="container">
 			  <div class="row">
 				  <div class="col-md-offset-2 col-md-8">
-					 <h1>Comic soon!</h1>
-					 	    <p class="lead">Tu podras reservar tu cita en tu barbershop preferida</p>
-					 	    <button type="button" class="app-store"></button>
+            <h1 class="cheddar extra-big">Barberos Haircut's</h1>
+					 <h1>Coming soon!</h1>
+           <p class="lead">La app que conecta las mejores barberías con los clientes que saben lo
+que quieren.</p>
+
+					 	    <button type="button" class="play-store"></button>
+                <button type="button" class="app-store"></button>
 				  </div>
 			  </div>
 		  </div>
@@ -124,11 +134,17 @@
 					      	<div class="row">
 					      		<div class="col-sm-12 col-md-offset-1 col-md-6">
 					      			<h1>BARBERO'S HAIRCUT</h1>
-					      			<p>Es una nueva aplicación movil destinada, tanto a barberos, como a usuarios</p>
+					      			<p>Encuentra tu barbería más cercana o la que mejor se adapte a tu estilo.</p>
+
+                      <p>Reserva tu cita de manera sencilla y rápida a tiempo real.</p>
+
+                      <p>Comparte tu opinión y valora la experiencia recibida con la comunidad.</p>
+                      <p>Conoce el trabajo de otros barberos en su perfil, eligiendo el que más se adapte a tu estilo.</p>
+                      <p>Comparte tu opinión con la comunidad.</p>
 					      		</div>
 					      		<div class="col-sm-12 col-md-5">
 					      			<div class="app-screenshot">
-					      				<img src="img/screenshots/app-1.png" class="img-responsive" alt="App Screen 1">
+					      				<img src="img/screenshots/app-1.jpg" class="img-responsive" alt="App Screen 1">
 					      			</div>
 					      		</div>
 					      	</div>
@@ -137,11 +153,12 @@
 					    	<div class="row">
 					    		<div class="col-sm-12 col-md-offset-1 col-md-6">
 					    			<h1>Desde tu perfil</h1>
-					    			<p>Podras organizar tus citas, y demás servicios</p>
+					    			<p>Da a conocer tu trabajo a los clientes y haz crecer tu negocio obteniendo
+                        más reservas y valoraciones positivas.</p>
 					    		</div>
 					    		<div class="col-sm-12 col-md-5">
 					    			<div class="app-screenshot">
-					    				<img src="img/screenshots/app-2.jpg" class="img-responsive" alt="App Screen 2">
+					    				<img src="img/screenshots/PERFIL_02_APPBARBEROS.jpg" class="img-responsive" alt="App Screen 2">
 					    			</div>
 					    		</div>
 					    	</div>
@@ -149,12 +166,27 @@
 					    <div class="item">
 					      <div class="row">
 					      	<div class="col-sm-12 col-md-offset-1 col-md-6">
-                    <h1>Desde tus reservas</h1>
-					    			<p>Podras confirmar tus proximas citas</p>
+                    <h1>Desde servicios</h1>
+					    			<p>Conoce el trabajo de cada barbero en su perfil, eligiendo el que más se
+                        adapte a tu estilo.</p>
 					      	</div>
 					      	<div class="col-sm-12 col-md-5">
 					      		<div class="app-screenshot">
-					      			<img src="img/screenshots/app-3.jpg" class="img-responsive" alt="App Screen 3">
+					      			<img src="img/screenshots/SERVICIOS_APPBARBEROS-01.jpg" class="img-responsive" alt="App Screen 3">
+					      		</div>
+					      	</div>
+					      </div>
+					    </div>
+              <div class="item">
+					      <div class="row">
+					      	<div class="col-sm-12 col-md-offset-1 col-md-6">
+                    <h1>Desde tus reservas</h1>
+					    			<p>Administra las citas de manera sencilla y rápida, cada barbería dispondrá
+                        de un perfil y cada barbero organizara su calendario por separado</p>
+					      	</div>
+					      	<div class="col-sm-12 col-md-5">
+					      		<div class="app-screenshot">
+					      			<img src="img/screenshots/app-3.jpg" class="img-responsive" alt="App Screen 4">
 					      		</div>
 					      	</div>
 					      </div>
@@ -166,6 +198,7 @@
 					    <li data-target="#carousel-example-generic-2" data-slide-to="0" class="active"></li>
 					    <li data-target="#carousel-example-generic-2" data-slide-to="1"></li>
 					    <li data-target="#carousel-example-generic-2" data-slide-to="2"></li>
+              <li data-target="#carousel-example-generic-2" data-slide-to="3"></li>
 					  </ol>
 					</div>
 				</div>
@@ -176,31 +209,44 @@
 
 	  <!-- FEATURES
 	      ================================================== -->
-	<!--  <section class="features">
+	 <section class="features">
 		  <div class="container">
 			  <div class="row">
 
 				  <div class="col-md-4">
 					  <div class="circle"><i class="icon-bookmark"></i></div>
-					  <h2>Quick &amp; Easy Setup</h2>
-					  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
+					  <h2>Reservas &amp; Online</h2>
+					  <p>Aumenta el potencial de tu negocio ofreciendo a tus clientes la
+                posibilidad de conocer el trabajo de tus barberos, elegir el que
+                más les guste y concertar una cita de forma online. Tus clientes
+                disfrutarán de la comodidad de poder reservar a cualquier hora,
+                y tú podrás recibir sus solicitudes de cita en tiempo real, a
+                cualquier día y a cualquier hora.</p>
 				  </div>
 
 				  <div class="col-md-4">
 					  <div class="circle"><i class="icon-keypad"></i></div>
-					  <h2>Parallax Scrolling</h2>
-					  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
+					  <h2>Promociones</h2>
+					  <p>Maximiza tus ventas ofreciendo promociones y descuentos
+                especiales a través de tu perfil de Barbero’s, ya sean de carácter
+                general o enfocados a fechas o días de la semana en concreto.
+                Puedes organizarlo como quieras, nosotros nos encargamos de
+                que funcione.</p>
 				  </div>
 
 				  <div class="col-md-4">
 					  <div class="circle"><i class="icon-like"></i></div>
-					  <h2>Responsive Design</h2>
-					  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
+					  <h2>Feedback</h2>
+					  <p>Tus clientes podrán valorar el trabajo tanto del barbero como de
+                la peluquería en su conjunto. Recibirás puntuaciones y
+                comentarios en tu perfil que permitirán mostrar el grado de
+                satisfacción de tus clientes y animarán a otros a elegir a tu
+                peluquería..</p>
 				  </div>
 
 			  </div>
 		  </div>
-	  </section> -->
+	  </section>
 
 
 	 <!-- SOCIAL
@@ -226,12 +272,6 @@
 	  <section class="get-it">
 	  	<div class="container">
 	  		<div class="row">
-	  			<div class="col-md-12">
-	  				<h1>Muy pronto en playstore</h1>
-            <br>
-	  				<!<p class="lead"></p>
-	  				<button type="button" class="app-store"></button>
-	  			</div>
 	  			<div class="col-md-12">
 	  				<hr />
 		  		<!--	<ul>
