--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 			    </button>
 
 			    <!--Replace text with your app name or logo image-->
-			    <a class="navbar-brand cheddar" href="#">Barberos Haircut's</a>
+			    <a class="navbar-brand cheddar nopadding" href="#"><img src="img/IDENTIDAD_VISUAL_APP.png"><img src="img/logoletra.png"></a>
 
 			  </div>
 			  <div class="collapse navbar-collapse navbar-ex1-collapse">
@@ -135,9 +135,7 @@ que quieren.</p>
 					      		<div class="col-sm-12 col-md-offset-1 col-md-6">
 					      			<h1>BARBERO'S HAIRCUT</h1>
 					      			<p>Encuentra tu barbería más cercana o la que mejor se adapte a tu estilo.</p>
-
                       <p>Reserva tu cita de manera sencilla y rápida a tiempo real.</p>
-
                       <p>Comparte tu opinión y valora la experiencia recibida con la comunidad.</p>
                       <p>Conoce el trabajo de otros barberos en su perfil, eligiendo el que más se adapte a tu estilo.</p>
                       <p>Comparte tu opinión con la comunidad.</p>
