change mobile logo

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 			    </button>
 
 			    <!--Replace text with your app name or logo image-->
-			    <a class="navbar-brand cheddar nopadding" href="#"><img src="img/IDENTIDAD_VISUAL_APP.png"><img src="img/logoletra.png"></a>
+			    <a class="navbar-brand cheddar nopadding" href="#"><img src="img/IDENTIDAD_VISUAL_APP.png"><img class="mobile-logo" src="img/logoletra.png"></a>
 
 			  </div>
 			  <div class="collapse navbar-collapse navbar-ex1-collapse">
